List to String[] in CategoryRequestDto